# leaf-js

./: .gitignore  .npmignore  404.html  LICENSE  bun.lockb  index.html  package-lock.json  package.json  prettier.config.cjs  prettier.config.js  readme.md  requirements.txt  test.ts  tsconfig.json  vite.config.ts  water_simulation.js
code-style/: index.html
dev/: .gitignore
dev/src/: App.tsx
include/: CMakeCache.txt  CMakeLists.txt  Makefile  interface.d.ts  readme.md
include/src/: Application.cpp  Application.h  MouseHandle.cpp  Renderer.cpp  Renderer.h  core.h  test.cpp
include/src/core/: Button.h  Circle.h  Entity.h  Line.h  MouseHandle.h  Rectangle.h  Renderer.h  Scene.h  Triangle.h  UI.h  core.h
leaf-docs/: mkdocs.yml
leaf-docs/docs/: Leaf.md  code-style.md  index.md  reference.md
leaf-py/: LICENSE  README.md  pyproject.toml
lib/: premake5.lua
lib/src/: main.cpp  platform.h
reference/: index.html
scripts/: build.py  format.sh
search/: search_index.json
src/: Model.ts  PipelineManager.ts  TextureManager.ts  constants.ts  index.ts  leaf.ts  main.ts  pipeline.ts  profiler.ts  renderer.old.ts  renderer.ts  rndr.ts  scene.ts  sceneManager.ts  stage.ts  style.css  test-triangle.ts
src/__tests__/: parser_obj_.test.ts
src/components/: Canvas.tsx  Figma.tsx  Scene.tsx
src/hooks/: useWasm.ts
src/meshes/: capsule.ts  mesh.types.ts  quad.ts
src/parsers/: aseprite.ts  aseprite.types.ts
src/shaders/: basic.vert.wgsl  texture.frag.wgsl
src/types/: math.types.ts  scene.types.ts  sceneTypes.ts  shapeTypes.ts
src/utils/: index.ts  util.ts
(+1 files in other folders)
