[project]
name = "leaf-py"
version = "0.0.1"
authors = [
    { name="deondreE" }, 
]
description="A simplification of webgpu rendering."
readme="README.md"
requires-python=">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setup-tools>=61.0"]
build-backend = "setuptools.build_meta"
